modularised index and router

--- a/views/battle.ejs
+++ b/views/battle.ejs
@@ -1,5 +1,5 @@
 <h1 >Battle page</h1>
-<h3> The game is in progress: <%= gameStatus %> </h3>
+<h3 id="game-status"> The game is in progress: <%= gameStatus %> </h3>
 <div>
     <p id = p1-display-name>Player 1: <%= p1Name %></p> 
     <p id = p1-hp><%= `Player 1 hp: ${p1hp}` %></p>
